# rizin

./: meson.build  meson_options.txt
librz/core/cmd_descs/: cmd_descs.yaml  cmd_move.yaml
test/: meson.build
test/fuzz/: fuzz_core.c  meson.build
